--- a/assets/scss/page/top/_feed-back.scss
+++ b/assets/scss/page/top/_feed-back.scss
@@ -78,6 +78,7 @@
                 }
                 @media #{$res600} {
                     font-size: 15px;
+                    margin-left: 45px;
                 }
             }
         }
