--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -31,28 +31,28 @@
  //
  // Padding & margin
  //
- //$info-phone-horizontal: "only screen and (max-width : 767px)";
- //$info-phone: "only screen and (max-width : 640px)";
+ //  $res1550: "only screen and (max-width : 1550px)";
  $res1200: "only screen and (max-width : 1200px)";
- $info-tablet-horizontal: "only screen and (max-width : 1160px)";
- $res1140: "only screen and (max-width : 1140px)";
- $res974: "only screen and (max-width : 974px)";
  $res1000: "only screen and (max-width : 1000px)";
- $info-tablet-vertical: "only screen and (max-width : 900px)";
- $info-phone: "only screen and (max-width : 767px)";
- $res740to1110: "(min-width : 740px) and (max-width : 1110px)";
- $res841: "only screen and (max-width : 841px)";
- $res740: "only screen and (max-width : 740px)";
- $res440: "only screen and (max-width : 440px)";
- $res600: "only screen and (max-width : 600px)";
- $info-phone-4: "only screen and (max-width : 320px)";
  $res800: "only screen and (max-width : 800px)";
- $res1350: "only screen and (max-width : 1350px)";
- $res1550: "only screen and (max-width : 1550px)";
- $res1024: "only screen and (max-width : 1024px)";
- $res964: "only screen and (max-width : 964px)";
- $res950: "only screen and (max-width : 950px)";
- $res700: "only screen and (max-width : 700px)";
- $res645: "only screen and (max-width : 645px)";
+ $res600: "only screen and (max-width : 600px)";
  $res370: "only screen and (max-width : 370px)";
+ //  $res1024: "only screen and (max-width : 1024px)";
+ //  $res1350: "only screen and (max-width : 1350px)";
+ //  $res440: "only screen and (max-width : 440px)";
+ //  $res974: "only screen and (max-width : 974px)";
+ //  $res964: "only screen and (max-width : 964px)";
+ //  $res950: "only screen and (max-width : 950px)";
+ //  $info-tablet-vertical: "only screen and (max-width : 900px)";
+ //  $res841: "only screen and (max-width : 841px)";
+ //  $info-tablet-horizontal: "only screen and (max-width : 1160px)";
+ //  $res1140: "only screen and (max-width : 1140px)";
+ //  $res740to1110: "(min-width : 740px) and (max-width : 1110px)";
+ //$info-phone-horizontal: "only screen and (max-width : 767px)";
+ //  $res645: "only screen and (max-width : 645px)";
+ //$info-phone: "only screen and (max-width : 640px)";
+ //  $info-phone-4: "only screen and (max-width : 320px)"; 
+ //  $info-phone: "only screen and (max-width : 767px)";
+ //  $res740: "only screen and (max-width : 740px)";
+ //  $res700: "only screen and (max-width : 700px)";
  $primary-green: #0eb493;
